--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,18 @@
 apply plugin: 'java'
 apply plugin: 'eclipse'
-apply plugin: "spring-boot"
 
 sourceCompatibility = 1.7
 version = '1.0'
+
+buildscript {
+    repositories {
+        maven { url "http://repo.springsource.org/libs-milestone/" }
+    }
+    dependencies {
+        classpath("org.springframework.boot:spring-boot-gradle-plugin:1.1.6.RELEASE")
+    }
+}
+
 jar {
     manifest {
         attributes 'Implementation-Title': 'Gradle Quickstart', 'Implementation-Version': version
@@ -18,6 +27,8 @@ dependencies {
     compile 'org.springframework.boot:spring-boot-starter-web:1.1.6.RELEASE'
     compile 'org.springframework:spring-context-support:4.1.0.RELEASE'
     compile 'org.apache.tomcat.embed:tomcat-embed-core:7.0.55'
+    compile 'mysql:mysql-connector-java:5.1.32'
+    compile 'commons-dbcp:commons-dbcp:1.4'
 }
 
 test {
@@ -32,13 +43,9 @@ uploadArchives {
     }
 }
 
-task fatJar(type: Jar) {
-    baseName = project.name + '-all'
-    from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
-    with jar
-}
+apply plugin: "spring-boot"
 
 springBoot {
-    mainClass = "to.gak.boot.Boots"
+    mainClass = "to.gak.Boot"
     layout = "JAR"
 }
